Update API_BASE URL to production endpoint

--- a/test-endpoints.html
+++ b/test-endpoints.html
@@ -80,7 +80,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000/api/ai';
+        const API_BASE = 'https://bhuddhimaan-minor.onrender.com/api/ai';
 
         function logResult(elementId, message, type = 'info') {
             const element = document.getElementById(elementId);
